fea: a working(?) jwt system

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ file.upload-dir=/public/classicmodels/uploads
 
 server.error.include-stacktrace=on_param
 server.error.include-exception=true
+
+jwt.secret-key=D0nTtRyNaT0r4cKm3
+jwt.token-interval=24
